Add support OpenAPI Explorer for view